[package]
name = "ynab-westpac-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"]}
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"]}
